<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.sf.platform.boot</groupId>
		<artifactId>sf-platform-boot-parent</artifactId>
		<version>1.0.0</version>
	</parent>
	<groupId>com.sf.nirvana</groupId>
	<artifactId>sf-nirvana-os</artifactId>
	<packaging>war</packaging>
	<version>1.0.0-SNAPSHOT</version>
	<name>${project.artifactId}</name>
	<url>http://maven.apache.org</url>

	<properties>
		<!-- Build args -->
		<!--<argline>-server -Xms64m -Xmx64m -XX:PermSize=64m -XX:MaxPermSize=64m</argline> -->
		<java.version>1.7</java.version>
		<file_encoding>UTF-8</file_encoding>
		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${file_encoding}</project.reporting.outputEncoding>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.test.skip>true</maven.test.skip>
		<skip_maven_deploy>false</skip_maven_deploy>
		
		<!-- url -->
		<issue.jira.url>http://10.0.137.95:8088/secure/Dashboard.jspa</issue.jira.url>
		<ci.url>http://10.118.46.12:8080/jenkins/job/${project.artifactId}</ci.url>
		<scm.source.url>http://10.0.137.95:7990/projects/CO-NIR/repos/</scm.source.url>
		<scm.source.connection>scm:git:http://10.0.137.95:7990/projects/CO-NIR/</scm.source.connection>
		<site.deploy.url>file:/usr/local/apache-tomcat-7.0.54/webapps/site/${project.artifactId}</site.deploy.url>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-core-asl</artifactId>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-jaxrs</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.10</version>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.2.4</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
		</dependency>

		<!--redis配置 -->
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
		</dependency>

		<!-- log start -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
		</dependency>
		<!-- log end -->

		<!-- for test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>libs-release</name>
			<url>http://10.103.14.50:8081/artifactory/repo</url>
		</repository>
		<repository>
			<id>sf-private-reponsitory</id>
			<name>SF private repository</name>
			<url>http://10.118.46.12:8081/nexus/content/groups/public/</url>
		</repository>
	</repositories>

	<build>
		<finalName>${project.artifactId}</finalName>
		<resources>  
            <resource>  
                <directory>src/main/resources</directory>  
                <filtering>true</filtering>
            </resource>  
        </resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>make-assembly-dev</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<skipAssembly>${skipAssemblyDEV}</skipAssembly>
							<descriptors>
								<descriptor>src/main/assembly/dev/assembly.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
					<execution>
						<id>make-assembly-uat</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<skipAssembly>${skipAssemblyUAT}</skipAssembly>
							<descriptors>
								<descriptor>src/main/assembly/uat/assembly.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
					<execution>
						<id>make-assembly-prod</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<skipAssembly>${skipAssemblyPROD}</skipAssembly>
							<descriptors>
								<descriptor>src/main/assembly/prod/assembly.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<env.devMode>dev</env.devMode>
				<skipAssemblyDEV>false</skipAssemblyDEV>
				<skipAssemblyUAT>true</skipAssemblyUAT>
				<skipAssemblyPROD>true</skipAssemblyPROD>
			</properties>
		</profile>
		<profile>
			<id>uat</id>
			<activation>
			</activation>
			<properties>
				<env.devMode>uat</env.devMode>
				<skipAssemblyDEV>true</skipAssemblyDEV>
				<skipAssemblyUAT>false</skipAssemblyUAT>
				<skipAssemblyPROD>true</skipAssemblyPROD>
			</properties>
		</profile>
		<profile>
			<id>prod</id>
			<activation>
			</activation>
			<properties>
				<env.devMode>prod</env.devMode>
				<skipAssemblyDEV>true</skipAssemblyDEV>
				<skipAssemblyUAT>true</skipAssemblyUAT>
				<skipAssemblyPROD>false</skipAssemblyPROD>
			</properties>
		</profile>
	</profiles>

</project>
